[gd_scene load_steps=20 format=3 uid="uid://u8d2vs780hgk"]

[ext_resource type="Script" uid="uid://cghi2cmecxkfw" path="res://coins/coin.gd" id="1_0t63x"]
[ext_resource type="Script" uid="uid://cd4ymdbj26e4a" path="res://coins/upgrades/upgrade.gd" id="2_8qiya"]
[ext_resource type="Material" uid="uid://dugirkc06pbwp" path="res://coins/materials/bronze_material.tres" id="3_npe6j"]
[ext_resource type="Material" uid="uid://dgyveh5hp3qnq" path="res://coins/materials/iron_material.tres" id="3_sg6lq"]
[ext_resource type="Texture2D" uid="uid://beo3s557i6psf" path="res://coins/materials/bronze.svg" id="4_sg6lq"]
[ext_resource type="Texture2D" uid="uid://e65vg37yrd0c" path="res://coins/materials/silver.svg" id="5_3hre8"]
[ext_resource type="Material" uid="uid://b2eut83mfwser" path="res://coins/materials/silver_material.tres" id="6_g1pwf"]
[ext_resource type="Texture2D" uid="uid://4r1jojt6hl70" path="res://coins/materials/gold.svg" id="7_8vljm"]
[ext_resource type="Material" uid="uid://dwsr4ouxb5ojh" path="res://coins/materials/gold_material.tres" id="8_eq56b"]
[ext_resource type="Texture2D" uid="uid://bfsqubx5j5rwb" path="res://coins/materials/diamond.svg" id="9_8av26"]
[ext_resource type="Material" uid="uid://0cvajtohc48s" path="res://coins/materials/diamond_material.tres" id="10_wso1s"]
[ext_resource type="Script" uid="uid://brpswu0gxa0j3" path="res://coins/upgrades/value/value_upgrade.gd" id="11_o055f"]
[ext_resource type="Texture2D" uid="uid://ce5sne8rjmucv" path="res://coins/materials/iron.svg" id="13_avygk"]

[sub_resource type="Curve" id="Curve_8qiya"]
_data = [Vector2(0, 0), 0.0, 6.301498, 0, 0, Vector2(0.24832214, 0.5617978), 0.0, 0.0, 0, 0, Vector2(0.7785235, 0.5617978), 0.0, 0.0, 0, 0, Vector2(1, 0), -8.097094, 0.0, 0, 0]
point_count = 4

[sub_resource type="Resource" id="Resource_3hre8"]
script = ExtResource("11_o055f")
heads_value = 10
icon = ExtResource("9_8av26")
material = ExtResource("10_wso1s")
name = "Diamond ðŸ’Ž"
cost = 1000
metadata/_custom_type_script = "uid://brpswu0gxa0j3"

[sub_resource type="Resource" id="Resource_g1pwf"]
script = ExtResource("11_o055f")
heads_value = 5
icon = ExtResource("7_8vljm")
material = ExtResource("8_eq56b")
name = "Gold"
cost = 100
next_upgrade = SubResource("Resource_3hre8")
metadata/_custom_type_script = "uid://brpswu0gxa0j3"

[sub_resource type="Resource" id="Resource_8vljm"]
script = ExtResource("11_o055f")
heads_value = 3
icon = ExtResource("5_3hre8")
material = ExtResource("6_g1pwf")
name = "Silver"
cost = 50
next_upgrade = SubResource("Resource_g1pwf")
metadata/_custom_type_script = "uid://brpswu0gxa0j3"

[sub_resource type="Resource" id="Resource_muxtv"]
script = ExtResource("11_o055f")
heads_value = 2
icon = ExtResource("4_sg6lq")
material = ExtResource("3_npe6j")
name = "Bronze"
description = "Make coin more valuable"
cost = 10
next_upgrade = SubResource("Resource_8vljm")
metadata/_custom_type_script = "uid://brpswu0gxa0j3"

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0t63x"]
height = 0.1

[node name="3DCoin" type="Node3D"]
script = ExtResource("1_0t63x")
flight_curve = SubResource("Curve_8qiya")
upgrade_paths = Array[ExtResource("2_8qiya")]([SubResource("Resource_muxtv")])

[node name="Positioning" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)

[node name="Visuals" type="Node3D" parent="Positioning"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)

[node name="coin_cylinder" type="CSGCylinder3D" parent="Positioning/Visuals"]
height = 0.1
material = ExtResource("3_sg6lq")

[node name="coin_icon" type="Sprite3D" parent="Positioning/Visuals/coin_cylinder"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.06, 0)
axis = 1
texture = ExtResource("13_avygk")

[node name="Area3D" type="Area3D" parent="Positioning/Visuals"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Positioning/Visuals/Area3D"]
shape = SubResource("CylinderShape3D_0t63x")

[connection signal="input_event" from="Positioning/Visuals/Area3D" to="." method="_on_area_3d_input_event"]
